crdesigner/verification_repairing/verification/hol/parser/gen/FormulaParser.py
# Generated from Formula.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FormulaParser ( Parser ):

    grammarFileName = "Formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'('", "','", "')'", "'['", "']'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'->'", "'<->'", "'in'", "'='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TRUE", "FALSE", 
                      "NOT", "UNIVERSAL", "EXISTENTIAL", "COUNTING", "AND", 
                      "OR", "XOR", "IMPL", "EQ", "IN", "EQUAL", "UNEQUAL", 
                      "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
                      "WITH", "PREDICATE", "VAR", "FUNCTION", "FIXED_DOMAIN", 
                      "WS", "STR_VALUE", "INT_VALUE", "FLOAT_VALUE" ]

    RULE_formula = 0
    RULE_expr = 1
    RULE_xor_expr = 2
    RULE_or_expr = 3
    RULE_and_expr = 4
    RULE_unary_expr = 5
    RULE_term = 6
    RULE_const = 7
    RULE_tuple_const = 8
    RULE_list_const = 9
    RULE_terms_signature = 10
    RULE_domain_vars = 11
    RULE_domain = 12
    RULE_atom = 13
    RULE_bool_ = 14

    ruleNames =  [ "formula", "expr", "xor_expr", "or_expr", "and_expr", 
                   "unary_expr", "term", "const", "tuple_const", "list_const", 
                   "terms_signature", "domain_vars", "domain", "atom", "bool_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    TRUE=7
    FALSE=8
    NOT=9
    UNIVERSAL=10
    EXISTENTIAL=11
    COUNTING=12
    AND=13
    OR=14
    XOR=15
    IMPL=16
    EQ=17
    IN=18
    EQUAL=19
    UNEQUAL=20
    LESS=21
    GREATER=22
    LESS_EQUAL=23
    GREATER_EQUAL=24
    WITH=25
    PREDICATE=26
    VAR=27
    FUNCTION=28
    FIXED_DOMAIN=29
    WS=30
    STR_VALUE=31
    INT_VALUE=32
    FLOAT_VALUE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dv = None # Domain_varsContext

        def expr(self):
            return self.getTypedRuleContext(FormulaParser.ExprContext,0)


        def WITH(self):
            return self.getToken(FormulaParser.WITH, 0)

        def domain_vars(self):
            return self.getTypedRuleContext(FormulaParser.Domain_varsContext,0)


        def getRuleIndex(self):
            return FormulaParser.RULE_formula

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)




    def formula(self):

        localctx = FormulaParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formula)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.expr(0)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FormulaParser.WITH:
                self.state = 31
                self.match(FormulaParser.WITH)
                self.state = 32
                localctx.dv = self.domain_vars()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class EquivalenceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExprContext,i)

        def EQ(self):
            return self.getToken(FormulaParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquivalence" ):
                return visitor.visitEquivalence(self)
            else:
                return visitor.visitChildren(self)


    class XorExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def xor_expr(self):
            return self.getTypedRuleContext(FormulaParser.Xor_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXorExpr" ):
                return visitor.visitXorExpr(self)
            else:
                return visitor.visitChildren(self)


    class ImplicationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ExprContext,i)

        def IMPL(self):
            return self.getToken(FormulaParser.IMPL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplication" ):
                return visitor.visitImplication(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FormulaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = FormulaParser.XorExprContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 36
            self.xor_expr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 44
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = FormulaParser.ImplicationContext(self, FormulaParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 38
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 39
                        localctx.op = self.match(FormulaParser.IMPL)
                        self.state = 40
                        localctx.right = self.expr(3)
                        pass

                    elif la_ == 2:
                        localctx = FormulaParser.EquivalenceContext(self, FormulaParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 41
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 42
                        localctx.op = self.match(FormulaParser.EQ)
                        self.state = 43
                        localctx.right = self.expr(2)
                        pass

             
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Xor_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_xor_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class XorContext(Xor_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Xor_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def or_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.Or_exprContext)
            else:
                return self.getTypedRuleContext(FormulaParser.Or_exprContext,i)

        def XOR(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.XOR)
            else:
                return self.getToken(FormulaParser.XOR, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXor" ):
                return visitor.visitXor(self)
            else:
                return visitor.visitChildren(self)



    def xor_expr(self):

        localctx = FormulaParser.Xor_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_xor_expr)
        try:
            localctx = FormulaParser.XorContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.or_expr()
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 50
                    localctx.op = self.match(FormulaParser.XOR)
                    self.state = 51
                    self.or_expr() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_or_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OrContext(Or_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Or_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def and_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.And_exprContext)
            else:
                return self.getTypedRuleContext(FormulaParser.And_exprContext,i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.OR)
            else:
                return self.getToken(FormulaParser.OR, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)



    def or_expr(self):

        localctx = FormulaParser.Or_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_or_expr)
        try:
            localctx = FormulaParser.OrContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.and_expr()
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 58
                    localctx.op = self.match(FormulaParser.OR)
                    self.state = 59
                    self.and_expr() 
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_and_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AndContext(And_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.And_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def unary_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.Unary_exprContext)
            else:
                return self.getTypedRuleContext(FormulaParser.Unary_exprContext,i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(FormulaParser.AND)
            else:
                return self.getToken(FormulaParser.AND, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)



    def and_expr(self):

        localctx = FormulaParser.And_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_and_expr)
        try:
            localctx = FormulaParser.AndContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.unary_expr()
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 66
                    localctx.op = self.match(FormulaParser.AND)
                    self.state = 67
                    self.unary_expr() 
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_unary_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UniversalContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.dv = None # Domain_varsContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def UNIVERSAL(self):
            return self.getToken(FormulaParser.UNIVERSAL, 0)
        def domain_vars(self):
            return self.getTypedRuleContext(FormulaParser.Domain_varsContext,0)

        def expr(self):
            return self.getTypedRuleContext(FormulaParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUniversal" ):
                return visitor.visitUniversal(self)
            else:
                return visitor.visitChildren(self)


    class ExistentialContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.dv = None # Domain_varsContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def EXISTENTIAL(self):
            return self.getToken(FormulaParser.EXISTENTIAL, 0)
        def domain_vars(self):
            return self.getTypedRuleContext(FormulaParser.Domain_varsContext,0)

        def expr(self):
            return self.getTypedRuleContext(FormulaParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExistential" ):
                return visitor.visitExistential(self)
            else:
                return visitor.visitChildren(self)


    class BuiltInPredicateContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.left = None # TermContext
            self.op = None # Token
            self.right = None # TermContext
            self.copyFrom(ctx)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.TermContext)
            else:
                return self.getTypedRuleContext(FormulaParser.TermContext,i)

        def EQUAL(self):
            return self.getToken(FormulaParser.EQUAL, 0)
        def UNEQUAL(self):
            return self.getToken(FormulaParser.UNEQUAL, 0)
        def LESS(self):
            return self.getToken(FormulaParser.LESS, 0)
        def GREATER(self):
            return self.getToken(FormulaParser.GREATER, 0)
        def LESS_EQUAL(self):
            return self.getToken(FormulaParser.LESS_EQUAL, 0)
        def GREATER_EQUAL(self):
            return self.getToken(FormulaParser.GREATER_EQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuiltInPredicate" ):
                return visitor.visitBuiltInPredicate(self)
            else:
                return visitor.visitChildren(self)


    class NotExprContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.right = None # AtomContext
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(FormulaParser.NOT, 0)
        def atom(self):
            return self.getTypedRuleContext(FormulaParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(FormulaParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class CountingContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.cop = None # Token
            self.num = None # Token
            self.dv = None # Domain_varsContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def COUNTING(self):
            return self.getToken(FormulaParser.COUNTING, 0)
        def INT_VALUE(self):
            return self.getToken(FormulaParser.INT_VALUE, 0)
        def domain_vars(self):
            return self.getTypedRuleContext(FormulaParser.Domain_varsContext,0)

        def expr(self):
            return self.getTypedRuleContext(FormulaParser.ExprContext,0)

        def LESS_EQUAL(self):
            return self.getToken(FormulaParser.LESS_EQUAL, 0)
        def EQUAL(self):
            return self.getToken(FormulaParser.EQUAL, 0)
        def GREATER_EQUAL(self):
            return self.getToken(FormulaParser.GREATER_EQUAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCounting" ):
                return visitor.visitCounting(self)
            else:
                return visitor.visitChildren(self)


    class PredicateContext(Unary_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.Unary_exprContext
            super().__init__(parser)
            self.op = None # Token
            self.sig = None # Terms_signatureContext
            self.copyFrom(ctx)

        def PREDICATE(self):
            return self.getToken(FormulaParser.PREDICATE, 0)
        def terms_signature(self):
            return self.getTypedRuleContext(FormulaParser.Terms_signatureContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)



    def unary_expr(self):

        localctx = FormulaParser.Unary_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unary_expr)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = FormulaParser.NotExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                localctx.op = self.match(FormulaParser.NOT)
                self.state = 74
                localctx.right = self.atom()
                pass

            elif la_ == 2:
                localctx = FormulaParser.PredicateContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                localctx.op = self.match(FormulaParser.PREDICATE)
                self.state = 76
                localctx.sig = self.terms_signature()
                pass

            elif la_ == 3:
                localctx = FormulaParser.AtomExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.atom()
                pass

            elif la_ == 4:
                localctx = FormulaParser.UniversalContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                localctx.op = self.match(FormulaParser.UNIVERSAL)
                self.state = 79
                localctx.dv = self.domain_vars()
                self.state = 80
                self.match(FormulaParser.T__0)
                self.state = 81
                localctx.right = self.expr(0)
                pass

            elif la_ == 5:
                localctx = FormulaParser.ExistentialContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                localctx.op = self.match(FormulaParser.EXISTENTIAL)
                self.state = 84
                localctx.dv = self.domain_vars()
                self.state = 85
                self.match(FormulaParser.T__0)
                self.state = 86
                localctx.right = self.expr(0)
                pass

            elif la_ == 6:
                localctx = FormulaParser.CountingContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                localctx.op = self.match(FormulaParser.COUNTING)
                self.state = 89
                localctx.cop = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FormulaParser.EQUAL) | (1 << FormulaParser.LESS_EQUAL) | (1 << FormulaParser.GREATER_EQUAL))) != 0)):
                    localctx.cop = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                localctx.num = self.match(FormulaParser.INT_VALUE)
                self.state = 91
                localctx.dv = self.domain_vars()
                self.state = 92
                self.match(FormulaParser.T__0)
                self.state = 93
                localctx.right = self.expr(0)
                pass

            elif la_ == 7:
                localctx = FormulaParser.BuiltInPredicateContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                localctx.left = self.term()
                self.state = 96
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FormulaParser.EQUAL) | (1 << FormulaParser.UNEQUAL) | (1 << FormulaParser.LESS) | (1 << FormulaParser.GREATER) | (1 << FormulaParser.LESS_EQUAL) | (1 << FormulaParser.GREATER_EQUAL))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 97
                localctx.right = self.term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormulaParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.TermContext
            super().__init__(parser)
            self.te = None # Token
            self.sig = None # Terms_signatureContext
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(FormulaParser.FUNCTION, 0)
        def terms_signature(self):
            return self.getTypedRuleContext(FormulaParser.Terms_signatureContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionTerm" ):
                return visitor.visitFunctionTerm(self)
            else:
                return visitor.visitChildren(self)


    class ListTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_const(self):
            return self.getTypedRuleContext(FormulaParser.List_constContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListTerm" ):
                return visitor.visitListTerm(self)
            else:
                return visitor.visitChildren(self)


    class TupleTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tuple_const(self):
            return self.getTypedRuleContext(FormulaParser.Tuple_constContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTupleTerm" ):
                return visitor.visitTupleTerm(self)
            else:
                return visitor.visitChildren(self)


    class ConstTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.TermContext
            super().__init__(parser)
            self.te = None # ConstContext
            self.copyFrom(ctx)

        def const(self):
            return self.getTypedRuleContext(FormulaParser.ConstContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstTerm" ):
                return visitor.visitConstTerm(self)
            else:
                return visitor.visitChildren(self)


    class VarTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormulaParser.TermContext
            super().__init__(parser)
            self.te = None # Token
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(FormulaParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarTerm" ):
                return visitor.visitVarTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = FormulaParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = FormulaParser.TupleTermContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.tuple_const()
                pass

            elif la_ == 2:
                localctx = FormulaParser.ListTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.list_const()
                pass

            elif la_ == 3:
                localctx = FormulaParser.FunctionTermContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                localctx.te = self.match(FormulaParser.FUNCTION)
                self.state = 104
                localctx.sig = self.terms_signature()
                pass

            elif la_ == 4:
                localctx = FormulaParser.ConstTermContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                localctx.te = self.const()
                pass

            elif la_ == 5:
                localctx = FormulaParser.VarTermContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                localctx.te = self.match(FormulaParser.VAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

